# nostr-openmls

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE.md  README.md
examples/basic-example/: .gitignore  Cargo.toml
examples/basic-example/src/: main.rs
examples/basic-example/src/nostr-mls-alice/mls_storage/: data.mdb  lock.mdb  storage.json
examples/basic-example/src/nostr-mls-bob/mls_storage/: data.mdb  lock.mdb  storage.json
memory_storage/: Cargo.toml
memory_storage/src/: lib.rs
src/: groups.rs  key_packages.rs  lib.rs  nostr_credential.rs  nostr_group_data_extension.rs  test_utils.rs  welcomes.rs
