[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"

[dependencies]
pretty_env_logger = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3.0"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
nostr-openmls = { version = "0.1.0", path="../../" }
nostr-sdk = {version = "0.37", features = ["nip44"]}